# prog1-hf

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
configs/: config-8p-test.ini  config-normal.ini
include/: button.h  library.h  main.h  powerup.h  resource.h  snake.h  sound.h  stdafx.h  text.h
src/: button.c  library.c  main.c  powerup.c  snake.c  sound.c  text.c
